# gx-script

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  test_script_js.cpp  test_script_lua.cpp
examples/js/: gany.js  test.js  test_module.js  test_task.js
examples/lua/: gany.lua  my_plug.lua  test.lua  test_gbytearray.lua  test_gfile.lua  test_gstring.lua  test_gthread.lua  test_gtime.lua  test_iterator.lua  test_jobsystem.lua  test_lua_class_multi_state.lua  test_table.lua  test_tasksystem.lua
script/: CMakeLists.txt
script/cmake/: gx-script.cmake
script/include/gx/: gany_js.h  gany_lua.h  reg_script.h
script/src/: reg_script.cpp
script/src/js/: gany_js_impl_qjs.cpp  gany_js_impl_qjs.h  gany_to_qjs.cpp  gany_to_qjs.h
script/src/lua/: gany_class_to_lua.cpp  gany_class_to_lua.h  gany_lua_impl.cpp  gany_lua_impl.h  gany_to_lua.cpp  gany_to_lua.h  lua_function.cpp  lua_function.h  lua_table.cpp  lua_table.h
tools/luac/: CMakeLists.txt
tools/luac/src/: luac.cpp
